# django-agentic

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
django_agentic/: __init__.py  admin.py  agent.py  apps.py  chat.py  context.py  credits.py  models.py  providers.py  serializers.py  service.py  urls.py  views.py
django_agentic/management/commands/: reset_free_credits.py
django_agentic/migrations/: 0001_initial.py  0002_add_model_type.py  0003_remove_db_table_overrides.py  0004_seed_default_models.py  0005_remove_provider_choices.py  0006_rename_app_label.py
django_agentic/static/django_agentic/frontend/: AgentChatWidget.tsx  agent.ts  client.ts  tsconfig.json
django_agentic/tests/: test_chat.py  test_credits.py  test_models.py  test_providers.py  test_record_usage.py  test_service.py  test_views.py  urls.py
